# simple_remnawave_bot

./: .dockerignore  .env.example  .gitignore  Dockerfile  docker-compose.yml  pyproject.toml  users.toml
.direnv/: flake-profile-a5d5b61aa8a61b7d9d765e1daf971a9a578f1cfa  flake-profile-a5d5b61aa8a61b7d9d765e1daf971a9a578f1cfa.rc
.direnv/flake-inputs/: 0zjk4bg7bw2zsh3w0rnyn4b4hfiw0s9n-source  zxhzdmgfqxwm2l41kwyjc56184jjzy2i-source
locales/ru/: bot.ftl
src/: config_loader.py  main.py  remnawave_service.py
src/bot/: dialogs.py  handlers.py  i18n.py
